fix(styling): Gave Navbar a higher z-index to avoid overlap issues, added article route to gray bg class

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -31,6 +31,7 @@ body {
   position: fixed;
   width: 100%;
   background-color: var(--nav-bar-bg-color, black);
+  z-index: 9999999;
 }
 .nav-main {
   display: flex;
